--- a/src/components/contentCard/ContentCard.scss
+++ b/src/components/contentCard/ContentCard.scss
@@ -1,7 +1,7 @@
-@import "../../styles/variables";
+@use "../../styles/variables" as vars;
 
 .content-card {
-  background: $light-grey;
+  background: vars.$light-grey;
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 4px 24px 0 rgba(41, 227, 142, 0.08);
@@ -22,14 +22,14 @@
   }
 
   .title {
-    color: $text-highlight;
+    color: vars.$text-highlight;
     margin-bottom: 6px;
-    font-size: $default-font-size;
+    font-size: vars.$default-font-size;
     grid-column: 1;
     grid-row: 1;
   }
   .creator {
-    color: $text-main;
+    color: vars.$text-main;
     font-size: 0.7rem;
     margin-bottom: 8px;
     grid-column: 1;
@@ -37,7 +37,7 @@
   }
   .status {
     font-weight: bold;
-    color: $text-highlight;
+    color: vars.$text-highlight;
     font-size: 1rem;
     grid-column: 2;
     grid-row: 1 / span 2; /* Span both rows for vertical centering */
