--- a/src/components/contentGrid/ContentGrid.scss
+++ b/src/components/contentGrid/ContentGrid.scss
@@ -1,11 +1,11 @@
-@import "../../styles/variables";
+@use "../../styles/variables" as vars;
 
 .content-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 32px;
   padding: 32px;
-  background: $dark-grey;
+  background: vars.$dark-grey;
 
   @media (max-width: 1200px) {
     grid-template-columns: repeat(3, 1fr);
