--- a/src/components/controls/search/SearchBar.scss
+++ b/src/components/controls/search/SearchBar.scss
@@ -1,10 +1,10 @@
-@import "../../../styles/variables";
+@use "../../../styles/variables" as vars;
 
 .search-bar {
   display: flex;
   align-items: center;
   gap: 8px;
-  background: $light-grey;
+  background: vars.$light-grey;
   padding: 8px 16px;
   border-radius: 8px;
 
@@ -12,9 +12,9 @@
     padding: 8px 12px;
     border: none;
     border-radius: 4px;
-    background: $light-grey;
-    color: $text-main;
-    font-size: $default-font-size;
+    background: vars.$light-grey;
+    color: vars.$text-main;
+    font-size: vars.$default-font-size;
     outline: none;
     width: 100%;
   }
